fixed some alignment and sizing bugs for iPhone for issue #39

--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -504,8 +504,9 @@ you can use the generic selector below, but it's slower:
     font-size: 20px;
   }
   header .inner .selector .current {
-    font-size: 29px;
-    margin: -1px;
+    font-size: 28px;
+    margin-top: -2px;
+    margin-left: 1px;
   }
   header .inner .selector .fob {
     width: 50px;
@@ -514,6 +515,9 @@ you can use the generic selector below, but it's slower:
   }
   header .inner .selector .fob span {
     font-size: 25px;
+  }
+  header .inner .options div {
+    font-size: 20px;
   }
   section {
     padding-top: 20px;
